[package]
name = "aweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.0"
fuzzy-matcher = "0.3.7"
iced = {version = "0.8.0", features = ["tokio", "debug", "canvas", "glow"]}
iced_aw = {version = "0.4.1", default-features = false, features = ["modal"]}
indexmap = {version = "1.9.2", features = ["serde"]}
ron = "0.8"
serde = {version = "1.0", features=["derive"]}
